# TandaSuggest

./: .gitignore  README.md  TangoSuggest.spec  pyproject.toml
scripts/: build_macos.sh  make_icon.py
src/tanda_suggester/: __init__.py  cli.py  db.py  importer.py  music_app.py  search.py  settings.py  suggest.py  tandas.py
src/tanda_suggester/gui/: app.py  main_window.py  theme.py  workers.py
src/tanda_suggester/gui/resources/: TangoSuggest.icns
src/tanda_suggester/gui/tabs/: import_tab.py  library_tab.py  noise_dialog.py  playlists_tab.py  settings_tab.py  suggest_tab.py
tests/: test_search.py  test_suggest.py  test_tandas.py
